--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-     <title>Get Ready - Coming Soon Template</title>
+     <title>Get Ready - Coming Soon Template Datapal</title>
 <!-- 
 
 Get Ready Template
